--- a/fso-part8-graphql/package.json
+++ b/fso-part8-graphql/package.json
@@ -9,10 +9,11 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "type": "module",
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
+    "mongoose": "^8.4.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
