--- a/fso-part8-apollo-client/package.json
+++ b/fso-part8-apollo-client/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.10.4",
+    "@apollo/client": "^3.10.5",
     "graphql": "^16.8.1",
+    "graphql-ws": "^5.16.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "subscriptions-transport-ws": "^0.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
