--- a/fso-part9-typescript-first-steps/package.json
+++ b/fso-part9-typescript-first-steps/package.json
@@ -5,14 +5,21 @@
   "main": "multiplier.js",
   "scripts": {
     "ts-node": "ts-node",
-    "multiply":"ts-node multiplier.ts",
-    "calculator":"ts-node calculator.ts"
+    "multiply": "ts-node multiplier.ts",
+    "calculator": "ts-node calculator.ts",
+    "start": "ts-node index.ts",
+    "dev":"ts-node-dev index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
