--- a/fso-part9-typescript-first-steps/package.json
+++ b/fso-part9-typescript-first-steps/package.json
@@ -2,22 +2,27 @@
   "name": "fso-part9-typescript-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "multiplier.js",
+  "main": "index.ts",
   "scripts": {
     "ts-node": "ts-node",
     "multiply": "ts-node multiplier.ts",
     "calculator": "ts-node calculator.ts",
     "start": "ts-node index.ts",
-    "dev":"ts-node-dev index.ts"
+    "dev": "ts-node-dev index.ts",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
+    "eslint": "^9.5.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.13.1"
   },
   "dependencies": {
     "express": "^4.19.2"
